--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,25 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+<!--开发上线配置-->
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <profile.name>dev</profile.name>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>prod</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <profile.name>prod</profile.name>
+            </properties>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
